# paper-manager

./: LICENSE  README.md  README_CN.md  demo.tape  pyproject.toml
.claude/commands/: deepaper.md
docs/: profiling-2512.13961.md
docs/superpowers/plans/: 2026-04-01-pipeline-discipline.md  2026-04-01-pipeline-redesign.md  2026-04-02-v3-quality-enhancement.md  2026-04-08-per-paper-analysis-v2.1.md
docs/superpowers/specs/: 2026-04-01-pipeline-discipline-design.md  2026-04-01-pipeline-redesign.md  2026-04-02-v3-quality-enhancement-design.md  2026-04-08-per-paper-analysis-v2.1-depth-design.md
docs/superpowers/specs/prompts/: classify.md  extractor-retry.md  writer-text-0.md  writer-text-1.md  writer-visual.md
papers/llm/pretraining/: minicpm-unveiling-the-potential-of-small-language-models-with-scalable-training.md  olmo-3.md
papers/llm/pretraining/olmo-3/: olmo-3.md
papers/recsys/generative-rec/: actions-speak-louder-than-words-trillion-parameter-sequential-transducers-for.md  recommender-systems-with-generative-retrieval.md
papers/recsys/llm-as-rec/: recommendation-as-language-processing-(rlp)-a-unified-pretrain,-personalized.md
papers/templates/: categories.md  classify.md  default.md  tags.md
src/deepaper/: analyzer.py  citations.py  cli.py  config.py  content_checklist.py  defaults.py  extractor.py  gates.py  output_schema.py  prompt_builder.py  registry.py  writer.py
src/deepaper/prompt_templates/: critic.md  extractor.md  fixer.md
src/paper_manager/: analyzer.py  cli.py  downloader.py  search.py  writer.py
templates/: schema.md
tests/: test_analyzer.py  test_cli.py  test_content_checklist.py  test_downloader.py  test_e2e_papers.py  test_extractor_checks.py  test_figure_extraction.py  test_gates.py  test_h11_figure_embed.py  test_h12_section_bucket.py  test_prompt_builder.py  test_registry.py  test_search.py  test_writer.py  update_golden.py
tests/golden/: olmo-3.md
